git added modal2

--- a/index.html
+++ b/index.html
@@ -338,7 +338,7 @@
                     <label class="sendName">
                         <span class="send-title">Имя</span>
 
-                        <input type="text" name="name">
+                        <input class="namelink" type="text" name="name">
                         <svg class="iconperson">
                             <use href="./image/sprite.svg#person"></use>
                         </svg>
@@ -346,7 +346,7 @@
                     <label class="sendPhone">
                         <span class="send-title">Телефон</span>
 
-                        <input type="tel" name="phone">
+                        <input class="tellink" type="tel" name="phone">
                         <svg class="iconphone">
                             <use href="./image/sprite.svg#phone"></use>
                         </svg>
@@ -354,7 +354,7 @@
                     <label class="sendEmail">
                         <span class="send-title">Почта</span>
 
-                        <input type="email" name="mail">
+                        <input class="emaillink" type="email" name="mail">
                         <svg class="iconemail">
                             <use href="./image/sprite.svg#email"></use>
                         </svg>
@@ -362,7 +362,7 @@
                     <label>
                         <span class="send-title">Комментарий</span>
 
-                        <textarea name="" placeholder="Введите текст"></textarea>
+                        <textarea class="modalText" name="" placeholder="Введите текст"></textarea>
                     </label>
                 </form>
             </div>
