--- a/portfolio.html
+++ b/portfolio.html
@@ -274,7 +274,7 @@
                 </div>
             </div>
             <div class="subscription">
-                <form action="">
+                <form action="#">
                     <label for="mail">
                         <span class="footer-title">Подпишитесь на рассылку</span>
                     </label>
