--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@
                 </div>
             </div>
             <div class="subscription">
-                <form action="" class="footerForm">
+                <form action="#" class="footerForm">
                     <label for="mail">
                         <span class="footer-title">Подпишитесь на рассылку</span>
                     </label>
@@ -334,11 +334,11 @@
             </button>
             <div class="send">
                 <h2>Оставьте свои данные, мы вам перезвоним</h2>
-                <form action="" class="form">
+                <form action="#" class="form">
                     <label class="sendName">
                         <span class="send-title">Имя</span>
 
-                        <input class="namelink" type="text" name="name">
+                        <input class="formstrok namelink" type="text" name="name">
                         <svg class="iconperson">
                             <use href="./image/sprite.svg#person"></use>
                         </svg>
@@ -346,7 +346,7 @@
                     <label class="sendPhone">
                         <span class="send-title">Телефон</span>
 
-                        <input class="tellink" type="tel" name="phone">
+                        <input class="formstrok tellink" type="tel" name="phone">
                         <svg class="iconphone">
                             <use href="./image/sprite.svg#phone"></use>
                         </svg>
@@ -354,7 +354,7 @@
                     <label class="sendEmail">
                         <span class="send-title">Почта</span>
 
-                        <input class="emaillink" type="email" name="mail">
+                        <input class="formstrok emaillink" type="email" name="mail">
                         <svg class="iconemail">
                             <use href="./image/sprite.svg#email"></use>
                         </svg>
@@ -362,8 +362,18 @@
                     <label>
                         <span class="send-title">Комментарий</span>
 
-                        <textarea class="modalText" name="" placeholder="Введите текст"></textarea>
+                        <textarea class="modalText" name="comment" placeholder="Введите текст"></textarea>
                     </label>
+                    <label class="check">
+                        <input class="checkbox" type="checkbox" name="">
+                        <span class="iconcheck2 "></span>
+                        <span class="send-check">Соглашаюсь с рассылкой и принимаю
+                            <a href="#">Условия договора</a></span>
+
+
+
+                    </label>
+                    <button class="buttonSend" type="submit">Отправить</button>
                 </form>
             </div>
         </div>
