--- a/index.html
+++ b/index.html
@@ -365,7 +365,7 @@
                         <textarea class="modalText" name="comment" placeholder="Введите текст"></textarea>
                     </label>
                     <label class="check">
-                        <input class="checkbox" type="checkbox" name="">
+                        <input class="checkbox" type="checkbox" name="check">
                         <span class="iconcheck2 "></span>
                         <span class="send-check">Соглашаюсь с рассылкой и принимаю
                             <a href="#">Условия договора</a></span>
