--- a/index.html
+++ b/index.html
@@ -348,7 +348,7 @@
 
                         <input class="formstrok tellink" type="tel" name="phone">
                         <svg class="iconphone">
-                            <use href="./image/sprite.svg#phone"></use>
+                            <use href="./image/sprite.svg#phoneicon"></use>
                         </svg>
                     </label>
                     <label class="sendEmail">
